# librcd

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  VERSION  autogen.sh  configure.ac  configure.in  librcd.pc.in  librcd.spec.in  release
debian/: changelog  control  rules  watch
examples/: example.c
src/: CMakeLists.txt  librcd.c  librcd.h
statgen/: Makefile  ascii.c  debug.c  doit  dragons.txt  generate.c  test.c  traslations  upper.c
