dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/librcd.c)

PACKAGE=librcd
LIBRCD_VERSION_MAJOR=0
LIBRCD_VERSION_MINOR=1
LIBRCD_VERSION_SUBMINOR=5
LIBRCD_VERSION=$LIBRCD_VERSION_MAJOR.$LIBRCD_VERSION_MINOR.$LIBRCD_VERSION_SUBMINOR
VERSION=$LIBRCD_VERSION
LIBRCD_VERSION_INFO=`echo $LIBRCD_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`

AC_SUBST(LIBRCD_VERSION)
AC_SUBST(LIBRCD_VERSION_MAJOR)
AC_SUBST(LIBRCD_VERSION_MINOR)
AC_SUBST(LIBRCD_VERSION_SUBMINOR)
AC_SUBST(LIBRCD_VERSION_INFO)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_PATH_PROG(RM, rm, /bin/rm)
AC_PATH_PROG(MV, mv, /bin/mv)
AC_PATH_PROG(TAR, tar, /bin/tar)

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(src/Makefile Makefile librcd.spec)
